--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
+    <string name="login">Login</string>
+    <string name="log_in_with">Log in with</string>
     <string name="app_name">7ART</string>
-
-
+    <string name="sign_up">Sign up</string>
+    <string name="sign_in">Sign In</string>
     <string name="password">Password</string>
     <string name="email">E-mail</string>
     <!-- Strings used for fragments for navigation -->
@@ -9,15 +11,10 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
     <string name="disconnected_user">Usuário desconectado</string>
-
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-
-
     <string name="facebook_app_id">1423013591366469</string>
     <string name="fb_login_protocol_scheme">fb1423013591366469</string>
     <string name="username">Username</string>
-
 </resources>
