--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="login">Login</string>
+    <string name="create_account">Create account</string>
     <string name="log_in_with">Log in with</string>
     <string name="app_name">7ART</string>
     <string name="sign_up">Sign up</string>
