--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="facebook_app_id">1423013591366469</string>
     <string name="fb_login_protocol_scheme">fb1423013591366469</string>
     <string name="username">Username</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="user_email">user email</string>
 </resources>
